--- a/lib/bundle.css
+++ b/lib/bundle.css
@@ -1,5 +1,5 @@
 
-.sen-drag[data-v-0e50d8ad] {
+.simple-drag[data-v-0e50d8ad] {
   padding: 5px 15px;
   border-radius: 3px;
   border: 1px solid #ccc;
